--- a/cryptoinfo/src/App.css
+++ b/cryptoinfo/src/App.css
@@ -75,11 +75,15 @@ th{
   height: 5vh;
 }
 
+td > p{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
 .titleHeader{
-  padding-top:10%;
+  padding-top:15%;
   padding-left: 10%;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 50px;
+  font-size: 7vh;
   background-color: rgba(167, 144, 144, 0.637);
 }
 
