--- a/cryptoinfo/src/App.css
+++ b/cryptoinfo/src/App.css
@@ -84,19 +84,39 @@ td > p{
   padding-left: 10%;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 7vh;
-  background-color: rgba(167, 144, 144, 0.637);
+  background-color: rgba(255, 255, 255, 0.637);
+  height: 4vh;
 }
 
 .titleDescription{
   width: 70%;
   padding-left: 10%;
   padding-bottom: 10%;
+  background-color: rgba(255,255,255,0.8);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 2vh;
 }
 
 .detailBody{
   width: 80%;
 }
 
+.detailsPageTable{
+  font-family: Arial, Helvetica, sans-serif;
+  padding-bottom: 5%;
+  width: 70%;
+}
+
+.detailHeadings{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 ::placeholder{
   padding-left: 5px;
+}
+
+.problemPage{
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgba(255,255,255,0.8);
+  height: 100vh;
 }
